# image-classifier

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
src/app/: main.py
src/app/config/: config.py
src/app/services/: ObjectsClassifier.py  PoseClassifier.py  __init__.py  image_classifier.py
src/app/static/: index.css  processed_image.css  script.js  styles.css
src/app/templates/: index.html  objects.html  poses.html  processed_image.html
src/services/: image_classifier.py
