[project]
name = "image-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "temm-dev",email = "temm-dev@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "mss (>=10.0.0,<11.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
