[project]
name = "image-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "temm-dev",email = "temm-dev@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (<=2.8.0)",
    "torchvision (<=0.23.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
